red utility menu

--- a/sass/theme/template-parts/utility_nav.scss
+++ b/sass/theme/template-parts/utility_nav.scss
@@ -4,7 +4,9 @@
 
         z-index:1;
 
-        background-color: $utility-nav-bg;
+        /** background-color: $utility-nav-bg; **/
+        background-color:red; 
+        
         padding-top: 4px;
         padding-bottom: 4px;
 
