--- a/sass/theme/template-parts/utility_nav.scss
+++ b/sass/theme/template-parts/utility_nav.scss
@@ -4,9 +4,8 @@
 
         z-index:1;
 
-        /** background-color: $utility-nav-bg; **/
-        background-color:red; 
-        
+        background-color: $utility-nav-bg; 
+
         padding-top: 4px;
         padding-bottom: 4px;
 
