--- a/sass/theme/template-parts/carousel.scss
+++ b/sass/theme/template-parts/carousel.scss
@@ -92,5 +92,11 @@
         }
     }
 
+    .carousel-item img {
+        max-height: unset;
+        width: 120vw;
+        max-width: unset;
+        overflow: hidden;
+    }
     
 }
