--- a/sass/theme/_child_theme_variables.scss
+++ b/sass/theme/_child_theme_variables.scss
@@ -12,6 +12,7 @@ $primary-nav-padding: 0 15px;
 $navigation-primary-font: 'Montserrat', sans-serif;
 
 $transition-primary: .8s cubic-bezier(.2,1,.3,1);
+$transition-flat: .8s ease;
 
 $slider-primary: white;
 
