--- a/sass/theme/template-parts/carousel.scss
+++ b/sass/theme/template-parts/carousel.scss
@@ -8,6 +8,9 @@
         transform: translateY(-50%) translateX(-50%);
         top: 50%;
         left: 50%;
+        @media(max-width:768px){
+            min-width: 80vw;
+        }
     }
 
     .carousel-wrapper {
@@ -21,6 +24,7 @@
     }
     
     .arrow-down-section {
+        z-index:1;
         position: absolute;
         bottom: 20px;
         display: flex;
@@ -52,11 +56,25 @@
         @media(min-width:768px){
             .top-text {
                 position: relative;
-                left: -15%;
+                left: -100vw;
+                transition: $transition-primary;
             }
             .bottom-text {
+                left: 100vw;
+                transition: $transition-primary;
                 position: relative;
-                left: 15%;
+            }
+        }
+        @media(max-width:768px){
+            .top-text {
+                position: relative;
+                transition: $transition-primary;
+                left: -100vw;
+            }
+            .bottom-text {
+                left: 100vw;
+                transition: $transition-primary;
+                position: relative;
             }
         }
         .slide-count {
@@ -65,19 +83,24 @@
             top: -5px;
             font-family: $font-family-primary;
             letter-spacing: 1.5px;
+            left: -100vw;
+            transition: $transition-primary;
         }
         .excerpt {
             position: relative;
             @media(min-width:768px){
-                left: 35%;
+                margin: 50px 0;
             }
-            margin: 50px 0;
+            @media(max-width:768px){
+                margin: 25px 0;
+            }
+            left: 100vw;
+            transition: $transition-primary;
         }
         .btn {
             position: relative;
-            @media(min-width:768px){
-                left: 35%;
-            }
+            left: 100vw;
+            transition: $transition-primary;
         }
     }
     
@@ -97,6 +120,7 @@
         width: 120vw;
         max-width: unset;
         overflow: hidden;
+        height: 100vh;
     }
     
 }
