--- a/css/child-theme.css
+++ b/css/child-theme.css
@@ -11979,8 +11979,38 @@ section#from-our-blog .main-blog-section {
   background-color: white;
   padding-top: 220px;
   padding-bottom: 220px;
-  margin-top: -180px;
-  z-index: 0; }
+  margin-top: -200px;
+  z-index: 0;
+  padding-left: 60px;
+  padding-right: 150px; }
+  section#from-our-blog .main-blog-section .blog-posts .main-post {
+    padding: 0 20px; }
+    section#from-our-blog .main-blog-section .blog-posts .main-post .title {
+      font-family: "Montserrat", sans-serif;
+      font-weight: 500;
+      font-size: 18px;
+      text-transform: uppercase; }
+    section#from-our-blog .main-blog-section .blog-posts .main-post .author, section#from-our-blog .main-blog-section .blog-posts .main-post .date {
+      font-family: "Roboto", sans-serif;
+      text-transform: uppercase;
+      font-size: 14px;
+      color: #a0a0a0;
+      margin-bottom: 0;
+      line-height: 18px;
+      letter-spacing: 1.15px; }
+
+section#from-our-blog .headline-section {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  position: relative;
+  margin-bottom: 40px; }
+  section#from-our-blog .headline-section h2 {
+    font-family: "Montserrat", sans-serif;
+    font-weight: 400; }
+  section#from-our-blog .headline-section div:nth-of-type(2) {
+    position: absolute;
+    right: 0; }
 
 /*
 * Use existing Bootstrap 4 classes and
