--- a/sass/theme/_child_theme.scss
+++ b/sass/theme/_child_theme.scss
@@ -6,3 +6,4 @@
 @import 'template-parts/carousel';
 @import 'template-parts/pathways_section';
 @import 'template-parts/from-our-blog';
+@import 'template-parts/homepage-offers';
