--- a/sass/theme/_child_theme_variables.scss
+++ b/sass/theme/_child_theme_variables.scss
@@ -1,5 +1,7 @@
 $primary: white !default;
 
+$secondary: #e7e7e7;
+
 $utility-nav-bg: black;
 $utility-nav-fa: #4c4c4c;
 $utility-nav-primary: white;
