--- a/css/child-theme.css
+++ b/css/child-theme.css
@@ -23,7 +23,7 @@
   --gray: #6c757d;
   --gray-dark: #343a40;
   --primary: white;
-  --secondary: #6c757d;
+  --secondary: #e7e7e7;
   --success: #28a745;
   --info: #17a2b8;
   --warning: #ffc107;
@@ -1397,19 +1397,19 @@ pre {
 .table-secondary,
 .table-secondary > th,
 .table-secondary > td {
-  background-color: #d6d8db; }
+  background-color: #f8f8f8; }
 
 .table-secondary th,
 .table-secondary td,
 .table-secondary thead th,
 .table-secondary tbody + tbody {
-  border-color: #b3b7bb; }
+  border-color: #f3f3f3; }
 
 .table-hover .table-secondary:hover {
-  background-color: #c8cbcf; }
+  background-color: #ebebeb; }
   .table-hover .table-secondary:hover > td,
   .table-hover .table-secondary:hover > th {
-    background-color: #c8cbcf; }
+    background-color: #ebebeb; }
 
 .table-success,
 .table-success > th,
@@ -2567,29 +2567,29 @@ fieldset:disabled a.btn {
               box-shadow: 0 0 0 0.2rem rgba(222, 222, 223, 0.5); }
 
 .btn-secondary {
-  color: #fff;
-  background-color: #6c757d;
-  border-color: #6c757d; }
+  color: #212529;
+  background-color: #e7e7e7;
+  border-color: #e7e7e7; }
   .btn-secondary:hover {
-    color: #fff;
-    background-color: #5a6268;
-    border-color: #545b62; }
+    color: #212529;
+    background-color: #d4d4d4;
+    border-color: #cecece; }
   .btn-secondary:focus, .btn-secondary.focus {
-    -webkit-box-shadow: 0 0 0 0.2rem rgba(130, 138, 145, 0.5);
-            box-shadow: 0 0 0 0.2rem rgba(130, 138, 145, 0.5); }
+    -webkit-box-shadow: 0 0 0 0.2rem rgba(201, 202, 203, 0.5);
+            box-shadow: 0 0 0 0.2rem rgba(201, 202, 203, 0.5); }
   .btn-secondary.disabled, .btn-secondary:disabled {
-    color: #fff;
-    background-color: #6c757d;
-    border-color: #6c757d; }
+    color: #212529;
+    background-color: #e7e7e7;
+    border-color: #e7e7e7; }
   .btn-secondary:not(:disabled):not(.disabled):active, .btn-secondary:not(:disabled):not(.disabled).active,
   .show > .btn-secondary.dropdown-toggle {
-    color: #fff;
-    background-color: #545b62;
-    border-color: #4e555b; }
+    color: #212529;
+    background-color: #cecece;
+    border-color: #c7c7c7; }
     .btn-secondary:not(:disabled):not(.disabled):active:focus, .btn-secondary:not(:disabled):not(.disabled).active:focus,
     .show > .btn-secondary.dropdown-toggle:focus {
-      -webkit-box-shadow: 0 0 0 0.2rem rgba(130, 138, 145, 0.5);
-              box-shadow: 0 0 0 0.2rem rgba(130, 138, 145, 0.5); }
+      -webkit-box-shadow: 0 0 0 0.2rem rgba(201, 202, 203, 0.5);
+              box-shadow: 0 0 0 0.2rem rgba(201, 202, 203, 0.5); }
 
 .btn-success {
   color: #fff;
@@ -2770,27 +2770,27 @@ fieldset:disabled a.btn {
               box-shadow: 0 0 0 0.2rem rgba(255, 255, 255, 0.5); }
 
 .btn-outline-secondary {
-  color: #6c757d;
-  border-color: #6c757d; }
+  color: #e7e7e7;
+  border-color: #e7e7e7; }
   .btn-outline-secondary:hover {
-    color: #fff;
-    background-color: #6c757d;
-    border-color: #6c757d; }
+    color: #212529;
+    background-color: #e7e7e7;
+    border-color: #e7e7e7; }
   .btn-outline-secondary:focus, .btn-outline-secondary.focus {
-    -webkit-box-shadow: 0 0 0 0.2rem rgba(108, 117, 125, 0.5);
-            box-shadow: 0 0 0 0.2rem rgba(108, 117, 125, 0.5); }
+    -webkit-box-shadow: 0 0 0 0.2rem rgba(231, 231, 231, 0.5);
+            box-shadow: 0 0 0 0.2rem rgba(231, 231, 231, 0.5); }
   .btn-outline-secondary.disabled, .btn-outline-secondary:disabled {
-    color: #6c757d;
+    color: #e7e7e7;
     background-color: transparent; }
   .btn-outline-secondary:not(:disabled):not(.disabled):active, .btn-outline-secondary:not(:disabled):not(.disabled).active,
   .show > .btn-outline-secondary.dropdown-toggle {
-    color: #fff;
-    background-color: #6c757d;
-    border-color: #6c757d; }
+    color: #212529;
+    background-color: #e7e7e7;
+    border-color: #e7e7e7; }
     .btn-outline-secondary:not(:disabled):not(.disabled):active:focus, .btn-outline-secondary:not(:disabled):not(.disabled).active:focus,
     .show > .btn-outline-secondary.dropdown-toggle:focus {
-      -webkit-box-shadow: 0 0 0 0.2rem rgba(108, 117, 125, 0.5);
-              box-shadow: 0 0 0 0.2rem rgba(108, 117, 125, 0.5); }
+      -webkit-box-shadow: 0 0 0 0.2rem rgba(231, 231, 231, 0.5);
+              box-shadow: 0 0 0 0.2rem rgba(231, 231, 231, 0.5); }
 
 .btn-outline-success {
   color: #28a745;
@@ -5206,15 +5206,15 @@ input[type="button"].btn-block {
             box-shadow: 0 0 0 0.2rem rgba(255, 255, 255, 0.5); }
 
 .badge-secondary {
-  color: #fff;
-  background-color: #6c757d; }
+  color: #212529;
+  background-color: #e7e7e7; }
   a.badge-secondary:hover, a.badge-secondary:focus {
-    color: #fff;
-    background-color: #545b62; }
+    color: #212529;
+    background-color: #cecece; }
   a.badge-secondary:focus, a.badge-secondary.focus {
     outline: 0;
-    -webkit-box-shadow: 0 0 0 0.2rem rgba(108, 117, 125, 0.5);
-            box-shadow: 0 0 0 0.2rem rgba(108, 117, 125, 0.5); }
+    -webkit-box-shadow: 0 0 0 0.2rem rgba(231, 231, 231, 0.5);
+            box-shadow: 0 0 0 0.2rem rgba(231, 231, 231, 0.5); }
 
 .badge-success {
   color: #fff;
@@ -5328,13 +5328,13 @@ input[type="button"].btn-block {
     color: #6c6c6c; }
 
 .alert-secondary {
-  color: #383d41;
-  background-color: #e2e3e5;
-  border-color: #d6d8db; }
+  color: #787878;
+  background-color: #fafafa;
+  border-color: #f8f8f8; }
   .alert-secondary hr {
-    border-top-color: #c8cbcf; }
+    border-top-color: #ebebeb; }
   .alert-secondary .alert-link {
-    color: #202326; }
+    color: #5f5f5f; }
 
 .alert-success {
   color: #155724;
@@ -5627,15 +5627,15 @@ input[type="button"].btn-block {
     border-color: #858585; }
 
 .list-group-item-secondary {
-  color: #383d41;
-  background-color: #d6d8db; }
+  color: #787878;
+  background-color: #f8f8f8; }
   .list-group-item-secondary.list-group-item-action:hover, .list-group-item-secondary.list-group-item-action:focus {
-    color: #383d41;
-    background-color: #c8cbcf; }
+    color: #787878;
+    background-color: #ebebeb; }
   .list-group-item-secondary.list-group-item-action.active {
     color: #fff;
-    background-color: #383d41;
-    border-color: #383d41; }
+    background-color: #787878;
+    border-color: #787878; }
 
 .list-group-item-success {
   color: #155724;
@@ -6420,12 +6420,12 @@ button.bg-primary:focus {
   background-color: #e6e6e6 !important; }
 
 .bg-secondary {
-  background-color: #6c757d !important; }
+  background-color: #e7e7e7 !important; }
 
 a.bg-secondary:hover, a.bg-secondary:focus,
 button.bg-secondary:hover,
 button.bg-secondary:focus {
-  background-color: #545b62 !important; }
+  background-color: #cecece !important; }
 
 .bg-success {
   background-color: #28a745 !important; }
@@ -6515,7 +6515,7 @@ button.bg-dark:focus {
   border-color: white !important; }
 
 .border-secondary {
-  border-color: #6c757d !important; }
+  border-color: #e7e7e7 !important; }
 
 .border-success {
   border-color: #28a745 !important; }
@@ -9046,10 +9046,10 @@ a.text-primary:hover, a.text-primary:focus {
   color: #d9d9d9 !important; }
 
 .text-secondary {
-  color: #6c757d !important; }
+  color: #e7e7e7 !important; }
 
 a.text-secondary:hover, a.text-secondary:focus {
-  color: #494f54 !important; }
+  color: #c1c1c1 !important; }
 
 .text-success {
   color: #28a745 !important; }
@@ -11797,6 +11797,9 @@ body #primary-nav.hasBackground {
     -webkit-transition: 0.8s cubic-bezier(0.2, 1, 0.3, 1);
     transition: 0.8s cubic-bezier(0.2, 1, 0.3, 1); }
 
+body.home {
+  background-color: black; }
+
 #primary-carousel {
   margin-top: -98px;
   z-index: 0; }
@@ -11823,22 +11826,6 @@ body #primary-nav.hasBackground {
     @media (max-width: 768px) {
       #primary-carousel .carousel-wrapper {
         padding: 0 30px; } }
-  #primary-carousel .arrow-down-section {
-    z-index: 1;
-    position: absolute;
-    bottom: 20px;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    width: 100%; }
-    #primary-carousel .arrow-down-section i.fa.fa-angle-down {
-      font-size: 40px;
-      font-weight: 600;
-      color: white;
-      opacity: 0.5; }
   #primary-carousel .carousel-item {
     max-height: 660px; }
     #primary-carousel .carousel-item img {
@@ -11917,6 +11904,23 @@ body #primary-nav.hasBackground {
     overflow: hidden;
     height: 100vh; }
 
+.arrow-down-section {
+  z-index: 1;
+  position: absolute;
+  bottom: 20px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 100%; }
+  .arrow-down-section i.fa.fa-angle-down {
+    font-size: 40px;
+    font-weight: 600;
+    color: white;
+    opacity: 0.5; }
+
 section#pathways {
   padding-top: 125px;
   padding-bottom: 100px;
@@ -11942,8 +11946,6 @@ section#pathways {
     margin-top: 70px; }
     section#pathways .three-pathways * {
       z-index: 2; }
-    section#pathways .three-pathways .container {
-      padding: 0 75px; }
     section#pathways .three-pathways .main-pathway {
       display: -webkit-box;
       display: -ms-flexbox;
@@ -11968,49 +11970,93 @@ section#pathways {
         line-height: 30px;
         letter-spacing: 2px; }
 
-section#from-our-blog .section-with-background {
-  background-image: url(/wp-content/uploads/2020/01/from-the-blog-side.png);
-  background-size: contain;
-  background-position: top left;
-  background-repeat: no-repeat;
-  background-color: black; }
-
-section#from-our-blog .main-blog-section {
-  background-color: white;
-  padding-top: 220px;
-  padding-bottom: 220px;
-  margin-top: -200px;
-  z-index: 0;
-  padding-left: 60px;
-  padding-right: 150px; }
-  section#from-our-blog .main-blog-section .blog-posts .main-post {
-    padding: 0 20px; }
-    section#from-our-blog .main-blog-section .blog-posts .main-post .title {
-      font-family: "Montserrat", sans-serif;
-      font-weight: 500;
-      font-size: 18px;
-      text-transform: uppercase; }
-    section#from-our-blog .main-blog-section .blog-posts .main-post .author, section#from-our-blog .main-blog-section .blog-posts .main-post .date {
-      font-family: "Roboto", sans-serif;
-      text-transform: uppercase;
-      font-size: 14px;
-      color: #a0a0a0;
-      margin-bottom: 0;
-      line-height: 18px;
-      letter-spacing: 1.15px; }
-
-section#from-our-blog .headline-section {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  position: relative;
-  margin-bottom: 40px; }
-  section#from-our-blog .headline-section h2 {
-    font-family: "Montserrat", sans-serif;
-    font-weight: 400; }
-  section#from-our-blog .headline-section div:nth-of-type(2) {
+section#from-our-blog {
+  position: relative; }
+  section#from-our-blog .section-with-background {
+    background-image: url(/wp-content/uploads/2020/01/from-the-blog-side.png);
+    background-size: contain;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-color: black;
     position: absolute;
-    right: 0; }
+    width: 25vw;
+    left: 0;
+    background-color: black; }
+  section#from-our-blog .right-white-section {
+    position: absolute;
+    right: 0;
+    top: 0;
+    background-color: white;
+    z-index: 0; }
+  section#from-our-blog .main-blog-section {
+    background-color: white;
+    padding-top: 220px;
+    padding-bottom: 220px;
+    margin-top: -200px;
+    margin-bottom: -100px;
+    z-index: 0;
+    padding-left: 100px; }
+    section#from-our-blog .main-blog-section .blog-posts .main-post {
+      padding: 0 20px; }
+      section#from-our-blog .main-blog-section .blog-posts .main-post .title {
+        font-family: "Montserrat", sans-serif;
+        font-weight: 500;
+        font-size: 18px;
+        text-transform: uppercase;
+        color: black; }
+      section#from-our-blog .main-blog-section .blog-posts .main-post .author, section#from-our-blog .main-blog-section .blog-posts .main-post .date {
+        font-family: "Roboto", sans-serif;
+        text-transform: uppercase;
+        font-size: 14px;
+        color: #a0a0a0;
+        margin-bottom: 0;
+        line-height: 18px;
+        font-weight: 400;
+        letter-spacing: 0.5px; }
+      section#from-our-blog .main-blog-section .blog-posts .main-post hr {
+        border-color: #d9d9d9; }
+  section#from-our-blog .headline-section {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    position: relative;
+    margin-bottom: 60px;
+    margin-left: 15px;
+    margin-right: 15px; }
+    section#from-our-blog .headline-section h2 {
+      font-family: "Montserrat", sans-serif;
+      font-weight: 400; }
+    section#from-our-blog .headline-section div:nth-of-type(2) {
+      position: absolute;
+      right: 0; }
+
+section#offers-section {
+  color: white;
+  padding-bottom: 100px;
+  position: relative; }
+  section#offers-section .text-section {
+    background-color: #2a2a2a;
+    min-height: 245px;
+    position: relative;
+    padding: 0 30px; }
+    section#offers-section .text-section .title {
+      font-family: "Montserrat", sans-serif;
+      font-size: 20px;
+      text-transform: uppercase; }
+    section#offers-section .text-section .btn,
+    section#offers-section .text-section .wpcf7 input[type=submit], .wpcf7 section#offers-section .text-section input[type=submit] {
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      width: 100%;
+      text-align: left; }
+  section#offers-section .background-section {
+    background-repeat: no-repeat;
+    background-position: top right; }
+  section#offers-section .offer-0 {
+    padding-right: 40px; }
+  section#offers-section .offer-1 {
+    padding-left: 40px; }
 
 /*
 * Use existing Bootstrap 4 classes and
