--- a/sass/theme/_child_theme.scss
+++ b/sass/theme/_child_theme.scss
@@ -7,3 +7,5 @@
 @import 'template-parts/pathways_section';
 @import 'template-parts/from-our-blog';
 @import 'template-parts/homepage-offers';
+@import 'template-parts/seo-section';
+@import 'template-parts/footer';
