--- a/sass/theme/template-parts/layout/global-fonts.scss
+++ b/sass/theme/template-parts/layout/global-fonts.scss
@@ -3,7 +3,6 @@
 
 body {
     background-color: $utility-search-bg;
-    height:200vh;
 }
 
 h1 {
@@ -23,11 +22,13 @@ p {
 
 .btn {
     text-transform:uppercase;
-    padding-right: 70px;
-    &::after {
-        content: '\f005';
-        position:absolute;
-        right: 10px;
-        font-family: FontAwesome;
+    &:not(.no-star){
+        padding-right: 70px;
+        &::after {
+            content: '\f005';
+            position:absolute;
+            right: 10px;
+            font-family: FontAwesome;
+        }
     }
 }
