--- a/sass/theme/template-parts/layout/primary_nav.scss
+++ b/sass/theme/template-parts/layout/primary_nav.scss
@@ -3,6 +3,22 @@
     padding-top: 30px;  
     z-index:1;
 
+    .dropdown-toggle::after {
+        display: none;
+    }
+
+    
+    #menu-primary-nav > .menu-item {
+        padding-right: 10px;
+        padding-left: 10px;
+    }
+
+    &.extended-height {
+        padding-bottom: 50px;
+        background-size:cover;
+        background-position:top left;
+    }
+
     &.transparent {
         background-color: transparent;
     }
@@ -24,9 +40,12 @@
 
     .right-section {
         position: relative;
+        top: 10px;
     }
 
     &.transparent {
+        box-shadow: 0 0 0 0 rgba(0,0,0,.7);
+        .gradient-overlay {opacity: 0;}
         .dropdown-menu.show{
             background-color:black;
             border-radius:0 !important;
@@ -43,6 +62,8 @@
     }
 
     &.hasBackground {
+        box-shadow: 0px 5px 10px 0px rgba(0,0,0,.7);
+        .gradient-overlay {opacity: 1;}
         .dropdown-menu.show{
             background-color:#2d2d2d;
             border-radius:0 !important;
@@ -57,9 +78,19 @@
                 }
             }
         }
-        .right-section {
-            top: 10px;
-        }
+        
+    }
+
+    
+    .gradient-overlay {
+        z-index:-1;
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        top: 0;
+        left: 0;
+        background: linear-gradient( rgba(0, 0, 0, 1), rgba(0,0,0, 1));
+        transition: $transition-primary;
     }
 
     .dropdown-menu.show {
@@ -73,5 +104,7 @@
     .dropdown-menu {
         margin-top: -10px;
     }
+
+    
 
 }
